@@ -7,6 +7,7 @@
    the cue file in case the FILE entry is bogus.
  * Always try to create a new session in case the old one has been imported regardless of the inserted
    medium's free space.
+ * Fixed DVD-RW Restricted Overwrite media handling
 
 0.12.3
 ======
